--- a/HTM/src/main/webapp/css/css/product-tmp.css
+++ b/HTM/src/main/webapp/css/css/product-tmp.css
@@ -1,21 +1,27 @@
-table, th, td {
-  border:1px solid #ccc;
+table,
+th,
+td {
+  border: 1px solid black;
   border-collapse: collapse;
 }
-th, td { 
-  padding:10px 20px; 
+th,
+td {
+  border: 1px solid black;
+  padding: 10px 20px;
 }
 div {
-  border:1px solid #222;/* 테두리 */
+  border: 1px solid #222; /* 테두리 */
   padding: 10px 20px;
-  box-shadow: 0 0 0 1pxrgba(0, 0, 0, 0.2);
+  /*box-shadow: 0 0 0 1pxrgba (0, 0, 0, 0.2);*/
 }
+
 #container {
-  width:600px;  /* 컨테이너의 너비 */
-  border:none;    /* 테두리 없앰 */
+  width: 600px; /* 컨테이너의 너비 */
+  border: none; /* 테두리 없앰 */
   overflow: hidden; /* 겹치는 부분의 테두리를 숨기기 위해 overflow 속성 추가 */
 }
-#description, #receipe {
+
+#receipe {
   border-top: none; /* 각 div의 상단 테두리를 없애서 겹치는 부분의 선이 얇게 보이도록 함 */
 }
 
