--- a/HTM/src/main/webapp/css/layout/3column.html
+++ b/HTM/src/main/webapp/css/layout/3column.html
@@ -4,15 +4,63 @@
 		<title>CSS 레이아웃 - 3단 레이아웃</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="css/3column.css">
+		<style>
+			
+			* {  
+				margin:0;  
+ 				padding:0;  
+ 	 			box-sizing: border-box; 
+				}
+
+			#container{
+				width: 1200px;
+				margin: 20px auto;
+				text-align: center;
+				
+			}
+			#header{
+				width: 100%;
+				height: 120px;
+				background-color: aqua;
+			}
+			#left-sidebar{
+				width: 25%;
+				height: 600px;
+				background-color:cornflowerblue;
+				float: left;
+			}
+			#contents{
+				width: 50%;
+				height: 600px;
+				background-color: darkblue;
+				color: gold;
+				float: left;
+
+			}
+			#right-sidebar{
+				width:25%;
+				height:600px;
+				background-color: cornflowerblue;
+				float :left
+
+			}
+			#footer{
+				width: 100%;
+				height: 100px;
+				background-color: deepskyblue;
+				clear: left;
+			}
+
+		</style>
 	</head>
 	<body>
 		<div id="container">
 			<header id="header">
 				<h1>사이트 제목</h1>
       </header>
-			<aside id="left-sidebar">
-				<h2>사이드바</h2>				
-      </aside>
+			<align=side id="left-sidebar" >
+				<h2 >사이드바</h2>				
+      </align=side>
 			<section id="contents">
 				<h2>본문</h2>
       </section>
