--- a/HTM/src/main/webapp/css/layout/3column-result.html
+++ b/HTM/src/main/webapp/css/layout/3column-result.html
@@ -4,21 +4,63 @@
 		<title>CSS 레이아웃 - 3단 레이아웃</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="css/3column-result.css">
+		<style>
+			*{
+				margin: 0;
+				padding: 0;
+				box-sizing: border-box;
+			}
+			#container{
+				width: 1200px;
+				margin: 20px auto;
+				text-align: center;
+
+			}
+			#header{
+				background-color: darkblue;
+				color: gold;
+				width: 100%;
+				height: 100px;
+			}
+			#left-sidebar{
+				background-color: dodgerblue;
+				float: left;
+				width: 200px;
+				height: 600px;
+			}
+			#contents{
+				background-color:darkslateblue ;
+				width: 800px;
+				height: 600px;
+				float: left;
+			}
+			#right-sidebar{
+				background-color: dodgerblue;
+				width: 200px;
+				height: 600px;
+				float: left;
+			}
+			#footer{
+				background-color: blue;
+				clear: left;
+				height: 100px;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="container">
 			<header id="header">
 				<h1>사이트 제목</h1>
-      </header>
+     		</header>
 			<aside id="left-sidebar">
 				<h2>사이드바</h2>				
-      </aside>
+    		</aside>
 			<section id="contents">
 				<h2>본문</h2>
-      </section>
+    		</section>
 			<aside id="right-sidebar">
 				<h2>사이드바</h2>
-      </aside>
+    		</aside>
 			<footer id="footer">
 				<h2>푸터</h2>
 			<footer>
