--- a/HTM/src/main/webapp/css/layout/index.html
+++ b/HTM/src/main/webapp/css/layout/index.html
@@ -13,46 +13,45 @@
 
       #header {
         background-color: #eee;
-        width: 100%;
+        width: 1200px;
         height: 100px;
         margin: 0 auto 20px;
       }
       #nav {
         background-color: #eee;
         height: 50px;
-        width: 100%;
+        width: 1200px;
         margin: 0 auto;
       }
       #content {
         background-color: #eee;
-        width: 100%;
+        width: 1200px;
         height: 600px;
         margin: 20px auto 20px;
       }
       .section_main {
-        width: 70%;
+        width: 900px;
         height: 600px;
-        background-color: cornflowerblue;
         float: left;
       }
       .section {
         height: 300px;
-        background-color: aqua;
+        background-color: deeppink;
       }
       .article {
-        background-color: cornflowerblue;
+        background-color: green;
         height: 300px;
       }
       .aside {
-        width: 30%;
+        width: 300px;
         height: 600px;
-        background-color: cadetblue;
+        background-color: red;
         float: left;
       }
       #footer {
         background-color: #eee;
         height: 100px;
-        width: 100%;
+        width: 1200px;
         margin: 0 auto;
         clear: left;
       }
