--- a/HTM/src/main/webapp/css/layout/index1.html
+++ b/HTM/src/main/webapp/css/layout/index1.html
@@ -1,66 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        #header{
-            width: 1000px;
-            height: 100px;
-            background-color: aquamarine;
-        }
-        #nav{
-            width: 1000px;
-            height: 50px;
-            background-color: cadetblue;
-        }
-        .section_main{
-            width: 700px;
-            height: 600px;
-            background-color: aqua;
-            float: left;
-        }
-        .aside{
-            width: 300px;
-            height: 600px;
-            background-color: forestgreen;
-            float: left;
-        }
-        .section{
-            width: 100%;
-            height: 300px;
-            background-color: darkblue;
-            color: gold;
-        }
-        .article{
-            height: 300px;
-        }
-        #footer{
-            width: 1000px;
-            height: 100px;
-            background-color: cornflowerblue;
-            clear: left;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      #container {
+        width: 1200px;
+        margin: 0 auto;
+      }
+      #header {
+        background-color: #eee;
+        height: 100px;
+        margin-bottom: 20px;
+      }
+      #nav {
+        background-color: #eee;
+        height: 50px;
+        margin-bottom: 20px;
+      }
+      #section_main {
+        width: 900px;
+        height: 600px;
+        float: left;
+        margin-bottom: 20px;
+      }
+      #section {
+        background-color: pink;
+        width: 900px;
+        height: 300px;
+        float: left;
+      }
+      #article {
+        background-color: green;
+        height: 300px;
+        width: 900px;
+        float: left;
+      }
+      #aside {
+        background-color: red;
+        width: 300px;
+        height: 600px;
+        float: left;
+      }
+      #footer {
+        background-color: #eee;
+        width: 1200px;
+        height: 100px;
+        clear: left;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div id="container">
-        <div id="header">header</div>
-        <div id="nav">nav</div>
-        <div id="content">
-          <div class="section_main">
-            <div class="section">section</div>
-            <div class="article">article</div>
-          </div>
-          <div class="aside">aside</div>
+      <div id="header">header</div>
+      <div id="nav">nav</div>
+      <div id="content">
+        <div id="section_main">
+          <div id="section">section</div>
+          <div id="article">article</div>
         </div>
-        <div id="footer">footer</div>
+        <div id="aside">aside</div>
       </div>
-</body>
+      <div id="footer">footer</div>
+    </div>
+  </body>
 </html>
