--- a/JavaScript/edu/site/mycode/css/style.css
+++ b/JavaScript/edu/site/mycode/css/style.css
@@ -1,3 +1,6 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -5,6 +8,9 @@
 }
 a{
     text-decoration: none;
+}
+ul{
+    list-style: none;
 }
     #container{
         margin: 0 auto;
@@ -19,12 +25,66 @@ a{
         float: left;
         width: 250px;
         height: 100px;
+        background-color: indigo;
+        line-height: 100px;
+        padding-left: 20px;
+    }
+    #logo h1{
+        font-family: 'Protest Riot', sans-serif;
+        font-size: 40px;
+        font-weight: 700;
+        color: #fff;
+        text-shadow:  0 -1px 0 #222;
     }
     nav {
         float: right;
         width: 900px;
         height: 100px;
-        background-color: green;
+        padding-top: 40px;
+    }
+    #topMenu{
+        height: 60px;
+    }
+    #topMenu > li{
+        float:left;
+        position : relative;
+    }
+    #topMenu >li >a{
+        display: block;
+        color: #fff;
+        font-weight: 600;
+        text-shadow: 0 1px #07c;
+        padding : 20px 60px
+    }
+    #topMenu >li > a >span{
+        font-size: 0.5em;
+    }
+    #topMenu > li > a:hover{
+        color:#000;
+        text-shadow: 0 -1px #07c;
+    }
+    #topMenu >li >ul{
+        display: none;
+        position: absolute;
+        width: 160px;
+        background-color: rgba(255,255,255,0.6);
+        left: 20px;
+        margin: 0;
+    }
+    #topMenu > li > ul > li{
+        padding: 10px 10px 10px 30px;
+    }
+    #topMenu > li > ul >li > a {
+        font-size: 14px;
+        padding:  10px;
+        color: #000;
+    }
+    #topMenu > li:hover > ul {
+        display: block;
+        z-index: 10;
+    }
+    #topMenu > li > ul > li > a:hover{
+        color:#f00;
     }
     content{
         width: 100%;
@@ -33,8 +93,42 @@ a{
         clear: both;
         width: 100%;
         height: 300px;
-        background-color: orange;
         overflow: hidden;
+        position: relative;
+    }
+    #slides {
+        position: absolute;
+    }
+    #slides > img {
+        width: 100%;
+        float: left;
+    }
+    button{
+        position: absolute;
+        height: 100%;
+        top: 0;
+        border: none;
+        padding: 20px;
+        background-color: transparent;
+        color: #000;
+        font-weight: 800;
+        font-size: 24px;
+        opacity: 0.5;
+    }
+    #prev{
+        left:0;
+    }
+    #next{
+        right:0;
+    }
+    button:hover{
+        background-color: #222;
+        color: #fff;
+        opacity: 0.6;
+        cursor: pointer;
+    }
+    button:focus{
+        outline: 0;
     }
    
     #tabMenu{
