--- a/JavaScript/edu/site/mycode/style.css
+++ b/JavaScript/edu/site/mycode/style.css
@@ -151,6 +151,7 @@ button:focus {
 #contents{  
   width:100%;   /* 너비 */
   height:300px;  /* 높이 */   
+  margin-top:20px;  /* 마진 추가 */
 }
 
 /* 탭 메뉴 */
@@ -213,42 +214,44 @@ button:focus {
   float:right;   /* 오른쪽으로 플로팅 */
   width:600px;   /* 너비 */
   height:100%;   /* 높이 */
+  margin-top:20px;  /* 마진 추가 */
 }
 #links ul{
-  padding: 0;
-  overflow: hidden;
+  padding:0;  /* 패딩 */ 
+  overflow: hidden;  /* 넘치는 것은 감춤 */
 }
 #links ul li{
-  float: left;
-  width: 33%;
-  text-align: center;
-  margin: 10px 0;
+  float:left;  /* 가로로 배치 */
+  width:33%;  /* 1/3 크기만큼씩 */
+  text-align:center;  /* 가운데 정렬 */
+  margin:10px 0;  /* 마진 */
 }
+
 #links ul li a span{
-  display: block;
-  margin: 0 auto;
-  width: 150px;
-  height: 150px;
-  border-radius: 100%;
-  border: 1px solid #ddd;
-  line-height: 150px;
-}
-#quick-icon1{
-  background-image: url('../images/icon-1.jpg');
-}
-#quick-icon2{
-  background-image: url('../images/icon-2.jpg');
+  display:block;  /* 블록 레벨로 */ 
+  margin:0 auto;  /* 가운데 배치 */ 
+  width:150px;  /* 가로 크기 */ 
+  height:150px;  /* 세로 크기 */
+  border-radius:100%;  /* 테두리 둥글게. border-radius: 150px로 해도 됨 */ 
+  border:1px solid #ddd;  /* 테두리 스타일 */
+  line-height:150px;  /* 수직으로 중간에 오게 */ 
 }
 
-#quick-icon3{
-  background-image: url('../images/icon-3.jpg');
+#quick-icon1 {
+  background-image:url('../images/icon-1.jpg'); 
 }
-#links ul li a p{
-  margin-top: 15px;
-  font-weight: 600;
-  color: #666;
+#quick-icon2 {
+  background-image:url('../images/icon-2.jpg'); 
+}
+#quick-icon3 {
+  background-image:url('../images/icon-3.jpg'); 
 }
 
+#links ul li a p {
+  margin-top:15px;  /* 위쪽 마진 */
+  font-weight:600;  /* 글자 굵기 */
+  color:#666;  /* 글자 색 */
+}
 
 /******************/
 /*   푸터 영역    */
@@ -257,5 +260,42 @@ button:focus {
 footer{   
   width:100%;   /* 너비 */
   height:100px;  /* 높이 */
-  background-color:gray;
+  border-top:2px solid #222;
+}
+#bottomMenu{
+  width:100%;
+  height:20px;
+  position: relative;
+}
+#bottomMenu ul {
+  margin-top:15px;  
+}
+#bottomMenu ul li{
+  float:left;  /* 가로로 배치 */ 
+  padding:5px 20px;
+  border-right:1px solid #ddd;   /* 항목 오른쪽에 테두리 */ 
+}
+#bottomMenu ul li:last-child{
+  border:none;  /* 마지막 항목에는 오른쪽 테두리 없음 */  
+}
+#bottomMenu ul li a, #bottomMenu ul li a:visited {  
+  font-size:15px;  /* 글자 크기 */ 
+  color:#666;   /* 글자 색 */ 
+}
+#sns {
+  position:absolute;  
+  right:0;  /* 오른쪽 끝에 배치 */ 
+}
+#sns ul li{
+  border:none;  /* 테두리 없이 */
+  padding:5px;   
+} 
+#company{
+  clear:left;  /* 플로팅 해제. clear:both도 가능 */
+  margin-top:25px;  /* 위쪽 마진 */
+  margin-left:20px;  /* 왼쪽 마진 */ 
+}
+p {
+  font-size:14px;  /* 글자 크기 */
+  color:#aaa;    /* 글자 색*/ 
 }
